handle weird semantics of SkRect::intersect() (tdf#131721)

If the two rectangles do not intersect, it only returns false and does
nothing, which is stupid and confusing.

Change-Id: I24de6059807c208c39db4e942ab5624dde788723
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/91471
Tested-by: Jenkins
Reviewed-by: Luboš Luňák <l.lunak@collabora.com>